--- a/.env.prod
+++ b/.env.prod
@@ -1,4 +1,4 @@
 DEBUG=False
-SECRET_KEY=+32f=0c6mlf1)!mmyi0$-lcr1sjb1b82orw89=f2@!+^vs#4$i
-ALLOWED_HOSTS=bayala-backend-5.onrender.com,localhost,127.0.0.1
-DATABASE_URL=postgresql://bayala_db_a9na_user:DhlbXdVsTvUxk7Ck8uAFNacS99otQAhx@dpg-d3d3mfruibrs738c47g0-a.oregon-postgres.render.com/bayala_db_a9na
+SECRET_KEY=6763296babb6801f201859c51a02cbee
+ALLOWED_HOSTS=https://controller-backend-ui2g.onrender.com/
+DATABASE_URL=postgresql://controller_whct_user:JL6CynqorSAh51JHlmtMp1D4FMiNyDc4@dpg-d557o5a4d50c739pagag-a.virginia-postgres.render.com/controller_whct
