--- a/.env.prod
+++ b/.env.prod
@@ -1,4 +1,4 @@
 DEBUG=False
 SECRET_KEY=6763296babb6801f201859c51a02cbee
-ALLOWED_HOSTS=https://controller-backend-ui2g.onrender.com/
+ALLOWED_HOSTS=controller-backend-ui2g.onrender.com
 DATABASE_URL=postgresql://controller_whct_user:JL6CynqorSAh51JHlmtMp1D4FMiNyDc4@dpg-d557o5a4d50c739pagag-a.virginia-postgres.render.com/controller_whct
